--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./logonj.png" type="image/png">
   <title>در حال بارگذاری...</title>
   <style>
     /* 🎨 رنگ‌های اصلی */
@@ -153,5 +154,6 @@
   </script>
 
 </body>
+
 
 </html>
