--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>نرگس جوهری — طراح وب و سئو</title>
+    <link rel="icon" href="./logonj.png" type="image/png">
   <meta name="description"
     content="رزومه نرگس جوهری، طراح وب و متخصص سئو. با مدرک کارشناسی مهندسی کامپیوتر نمونه کارها و مهارت‌هایم را مشاهده کنید و با من تماس بگیرید.">
 
@@ -604,5 +605,6 @@
   <!-- i18next translation script -->
   
 </body>
+
 
 </html>
