--- a/main.html
+++ b/main.html
@@ -193,6 +193,7 @@
             <div class="thumb">
               <img src="Screenshot (302).png">
             </div>
+            <a href="https://nargesjohari800-web.github.io/Cyrus-the-Great/">
             <div class="title" data-i18n="project1Title3"> سایت زندگی نامه کوروش کبیر</div>
             <div class="desc" data-i18n="project1Desc3">طراحی انیمیشنی و رابط کاربری .
             </div>
@@ -203,11 +204,13 @@
               <span class="tag">Front-end </span>
               <span class="tag">ui/ux</span>
             </div>
+            </a>
           </article>
           <article class="card" tabindex="0">
             <div class="thumb">
               <img src="Screenshot 2025-11-13 103244.png">
             </div>
+            <a href="https://github.com/nargesjohari800-web/engcomp.dez">
             <div class="title" data-i18n="project1Title4"> سایت انجمن </div>
             <div class="desc" data-i18n="project1Desc4">طراحی رابط کاربری و تجربه کاربری برای پلتفرم تجارت الکترونیک.
             </div>
@@ -216,6 +219,7 @@
               <span class="tag">Tailwind</span>
               <span class="tag">Figma</span>
             </div>
+            </a>
           </article>
 
           <article class="card" tabindex="0">
@@ -608,3 +612,4 @@
 
 
 </html>
+
