--- a/main.html
+++ b/main.html
@@ -190,10 +190,10 @@
           </article>
 
           <article class="card" tabindex="0">
+               <a href="https://nargesjohari800-web.github.io/Cyrus-the-Great/">
             <div class="thumb">
               <img src="Screenshot (302).png">
             </div>
-            <a href="https://nargesjohari800-web.github.io/Cyrus-the-Great/">
             <div class="title" data-i18n="project1Title3"> سایت زندگی نامه کوروش کبیر</div>
             <div class="desc" data-i18n="project1Desc3">طراحی انیمیشنی و رابط کاربری .
             </div>
@@ -207,10 +207,10 @@
             </a>
           </article>
           <article class="card" tabindex="0">
+            <a href="https://nargesjohari800-web.github.io/engcomp.dez/">
             <div class="thumb">
               <img src="Screenshot 2025-11-13 103244.png">
             </div>
-            <a href="https://github.com/nargesjohari800-web/engcomp.dez">
             <div class="title" data-i18n="project1Title4"> سایت انجمن </div>
             <div class="desc" data-i18n="project1Desc4">طراحی رابط کاربری و تجربه کاربری برای پلتفرم تجارت الکترونیک.
             </div>
@@ -612,4 +612,5 @@
 
 
 </html>
+
 
